logs/aiozk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aiozk'...
Listing './lib/python3.5/site-packages/aiozk/protocol'...
Listing './lib/python3.5/site-packages/aiozk/recipes'...
Listing './lib/python3.5/site-packages/aiozk/test'...
Compiling './lib/python3.5/site-packages/aiozk/test/conftest.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/conftest.py", line 36
    print(f'Tree dump: {out}')
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_client.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_client.py", line 14
    child_1 = f'{path}/{uuid.uuid4().hex}'
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_treecache.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_treecache.py", line 16
    await self.zk.create(f'{self.path}/{name}')
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiozk/test/test_watchers.py'...
***   File "./lib/python3.5/site-packages/aiozk/test/test_watchers.py", line 79
    yield f'{path}/{uuid.uuid4().hex}'
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aiozk-0.5.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_json_logger-0.1.8.dist-info'...
Listing './lib/python3.5/site-packages/pythonjsonlogger'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tipsi_tools'...
Listing './lib/python3.5/site-packages/tipsi_tools/django'...
Listing './lib/python3.5/site-packages/tipsi_tools/doc_utils'...
Listing './lib/python3.5/site-packages/tipsi_tools/doc_utils/tipsi_sphinx'...
Listing './lib/python3.5/site-packages/tipsi_tools/drf'...
Listing './lib/python3.5/site-packages/tipsi_tools/scripts'...
Listing './lib/python3.5/site-packages/tipsi_tools/testing'...
Listing './lib/python3.5/site-packages/tipsi_tools/testing/drf'...
Listing './lib/python3.5/site-packages/tipsi_tools-1.17.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
